--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/cqrs": "^8.0.5",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.1.4",
+    "fastify-swagger": "^5.2.0",
     "moment-timezone": "^0.5.34",
     "mysql2": "^2.3.3",
     "node-sql-reader": "^0.1.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.3.7",
     "typescript-result": "^1.2.0"
   },
